# agent-study

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: Agent.md
docs/note/: Agent.md  ReAct.md
docs/question/charter_1/: 智能健身教练.md
src/agent/re_act/: agent.py  llm_client.py  parser.py  react_agent.py  test_tools.py  tools.py  utils.py
src/agent/travel/: travel_agent.py
src/resource/prompt/: react.txt  travel.txt
src/tests/: test_env.py  test_travel_agent.py
src/tests/re_act/: test_re_act.py
